# orrery

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  POC_RESULTS.md  README.md
.superpowers/sdd/: final-review-fixes.md
assets/bots/base/: README.md
docs/: orrery-poc-prompt.md
docs/handoffs/: 2026-06-17-stage0-poc-and-stage1-scoping.md  2026-06-19-stage1-live-rabbitmq-ingestion.md  2026-06-20-stage2-subsystemA-avatar-gen.md  NEXT-SESSION.md
docs/superpowers/plans/: 2026-06-17-stage1-ingestion-foundation.md  2026-06-18-stage1-plan2-rabbitmq.md  2026-06-20-stage2-subsystemA-avatar-generation-pipeline.md
docs/superpowers/specs/: 2026-06-17-stage1-ingestion-design.md  2026-06-17-stage1-source-verification.md  2026-06-18-stage1-plan2-rabbitmq-design.md  2026-06-19-stage2-character-avatars-design.md
src/: agent.rs  diagnostics.rs  main.rs  sync.rs  visuals.rs
src/ingest/: mod.rs  model.rs  reducer.rs  synthetic.rs
src/ingest/sources/: mod.rs  rabbitmq.rs  transcript.rs
src/ingest/sources/fixtures/: SCHEMA.md  hook_pretooluse.json  hook_sessionstart.json  (+2 more)
tools/avatar-gen/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tools/avatar-gen/src/: cli.ts  config.ts  gemini.ts  index.ts  pipeline.ts  poses.ts  prompt.ts  registry.ts  storage.ts
tools/avatar-gen/test/: config.test.ts  derive.test.ts  gemini.test.ts  geometry.test.ts  gitea.test.ts  hash.test.ts  integration.live.test.ts  pipeline.test.ts  poses.test.ts  prompt.test.ts  registry.test.ts  schema.test.ts  slice.test.ts  smoke.test.ts  storage.test.ts
(+7 files in other folders)
